--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
+    "husky": "^9.1.4",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.8",
     "mockjs": "^1.1.0",
     "mrm": "^4.1.22",
     "prettier": "^3.3.3",
