--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install",
     "test": "vitest run --silent",
     "test:watch": "vitest",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
     "coverage": "npm run test -- --coverage"
   },
   "keywords": [],
@@ -20,6 +22,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@cypress/code-coverage": "^3.12.44",
+    "@cypress/vite-dev-server": "^5.1.1",
+    "@cypress/vue": "^3.1.0",
     "@pinia/testing": "^0.1.5",
     "@testing-library/vue": "^8.1.0",
     "@types/node": "^22.1.0",
@@ -32,11 +37,13 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.13.2",
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
     "happy-dom": "^14.12.3",
     "husky": "^9.1.4",
+    "istanbul-lib-coverage": "^3.2.2",
     "less": "^4.2.0",
     "lint-staged": "^15.2.8",
     "mockjs": "^1.1.0",
@@ -45,7 +52,9 @@
     "sass": "^1.77.8",
     "typescript": "^5.5.4",
     "vite": "^5.4.0",
+    "vite-plugin-istanbul": "^6.0.2",
     "vite-plugin-mock": "^3.0.2",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
     "vue-tsc": "^2.0.29"
   },
